[package]
name = "info-joinbloque-com"
version = "0.1.0"
authors = ["David Barinas <david@valiu.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "3"
ansi_term = "0.12"
serde_json = "1.0"

[dependencies.drawille]
git = "git://github.com/P1start/drawille-rs"
